# ur5_apriltag_cube_swap

./: README.md  build.sh  ros2_architecture.drawio  run.sh
cubes_info/: CMakeLists.txt  package.xml
cubes_info/action/: DetectColor.action
cubes_info/cfg/: tags_36h11.yaml
cubes_info/include/: detect_color_node.hpp  find_cubes_position_node.hpp
cubes_info/launch/: camera_36h11.launch.yml  cubes_info.launch.xml
cubes_info/msg/: CubesPoses.msg
cubes_info/src/: detect_color_node.cpp  find_cubes_position_node.cpp  main.cpp
g4_launch/: CMakeLists.txt  package.xml
g4_launch/launch/: assignment_2.launch.xml
logic_controller/: CMakeLists.txt  package.xml
logic_controller/config/: swap_cubes.xml
logic_controller/include/logic_controller/: behaviour_tree.hpp
logic_controller/launch/: robot_logic_controller.launch.xml
logic_controller/src/: behaviour_tree.cpp  robot_controller.cpp
motion_controller/: CMakeLists.txt  package.xml
motion_controller/action/: MoveCube.action
motion_controller/include/motion_controller/: robot_manipulator.hpp
motion_controller/launch/: motion_controller.launch.py
motion_controller/src/: main.cpp  robot_manipulator.cpp
