<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>logic_controller</name>
  <version>0.0.0</version>
  <description>High-level robot logic using Behavior Trees</description>
  <maintainer email="matteo.bino@studenti.unipd.it">Matteo Bino</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>

  <depend>cubes_info</depend>
  <depend>motion_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
